Added remember feature
Remembers 'other' passwords that are chosen just in case you need to use
it again.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,7 +9,7 @@
   spacing-columns: 1em;
 }
 
-.popup-menu-item .lastpass-favourite-button StIcon {
+.popup-menu-item .lastpass-favourite-button StIcon, .popup-menu-item .lastpass-delete-button StIcon {
   icon-size:16px;
 }
 
